--- a/gschem/po/ml.po
+++ b/gschem/po/ml.po
@@ -843,59 +843,80 @@ msgstr "ഉറവിടത്തിനായി തിരയുന്നു"
 msgid "Failed to descend into"
 msgstr "ഇതിലേക്ക് ഇറങ്ങുന്നത് പരാജയപ്പെട്ടു"
 
+# Hierarchy Error; śrēṇi piśak
 #: gschem/src/iface/i_command.c:3322
 msgid "Hierarchy Error"
-msgstr ""
+msgstr "ശ്രേണി പിശക്"
 
+# Searching for symbol; cihnattināyi tirayunnu
 #: gschem/src/iface/i_command.c:3399
 msgid "Searching for symbol"
-msgstr ""
+msgstr "ചിഹ്നത്തിനായി തിരയുന്നു"
 
+# Symbol is not a real file. Symbol cannot be loaded.
+# cihnaṁ oru yathārt'tha phayalalla. cihnaṁ lēāḍuceyyān kaḻiyilla.
 #: gschem/src/iface/i_command.c:3409
 msgid "Symbol is not a real file. Symbol cannot be loaded.\n"
-msgstr ""
+msgstr "ചിഹ്നം ഒരു യഥാർത്ഥ ഫയലല്ല. ചിഹ്നം ലോഡുചെയ്യാൻ കഴിയില്ല .\n"
 
+# Cannot find any schematics above the current one
+# nilavile onnin mukaḷiluḷḷa ēteṅkiluṁ skīmaṟṟiks kaṇṭettān kaḻiyilla
 #: gschem/src/iface/i_command.c:3457
 msgid "Cannot find any schematics above the current one!\n"
-msgstr ""
+msgstr "നിലവിലെ ഒന്നിന് മുകളിലുള്ള ഏതെങ്കിലും സ്കീമറ്റിക്സ് കണ്ടെത്താൻ കഴിയില്ല !\n"
 
+# Object is attached to something; ob‌jakṟṟ enteṅkilumāyi bandhippiccirikkunnu
 #: gschem/src/iface/i_command.c:3587
 msgid "Object is attached to something\n"
-msgstr ""
+msgstr "ഒബ്‌ജക്റ്റ് എന്തെങ്കിലുമായി ബന്ധിപ്പിച്ചിരിക്കുന്നു\n"
 
+# Attribute is already attached; āṭribyūṭṭ itinakaṁ aṟṟāccucey‌tu
 #: gschem/src/iface/i_command.c:3993
 msgid "Attribute is already attached\n"
-msgstr ""
+msgstr "ആട്രിബ്യൂട്ട് ഇതിനകം അറ്റാച്ചുചെയ്‌തു\n"
 
+# WARNING: Do not translate with snap off
+# munnaṟiyipp: snāpp ōph upayēāgicc vivarttanaṁ ceyyarut
 #: gschem/src/iface/i_command.c:4407
 msgid "WARNING: Do not translate with snap off!\n"
-msgstr ""
+msgstr "മുന്നറിയിപ്പ്: സ്നാപ്പ് ഓഫ് ഉപയോഗിച്ച് വിവർത്തനം ചെയ്യരുത്!\n"
 
+# WARNING: Turning snap on and continuing with translation
+# munnaṟiyipp: snāpp ōṇākki vivarttanaṁ tuṭaruka
 #: gschem/src/iface/i_command.c:4408
 msgid "WARNING: Turning snap on and continuing with translation.\n"
-msgstr ""
+msgstr "മുന്നറിയിപ്പ്: സ്നാപ്പ് ഓണാക്കി വിവർത്തനം തുടരുക .\n"
 
+# WARNING: Snap grid size is not equal to 100
+# munnaṟiyipp: snāpp griḍ valuppaṁ 100 n tulyamalla
 #: gschem/src/iface/i_command.c:4414
 msgid "WARNING: Snap grid size is not equal to 100!\n"
-msgstr ""
+msgstr "മുന്നറിയിപ്പ്: സ്നാപ്പ് ഗ്രിഡ് വലുപ്പം 100 ന് തുല്യമല്ല !\n"
 
+# munnaṟiyipp: niṅṅaḷ uṟaviṭattilēkk oru cihnaṁ vivarttanaṁ
+# ceyyukayāṇeṅkil, snāpp griḍ valuppaṁ 100 āyi sajjīkarikkaṇaṁ
 #: gschem/src/iface/i_command.c:4415
 msgid ""
 "WARNING: If you are translating a symbol to the origin, the snap grid size "
 "should be set to 100\n"
 msgstr ""
+"മുന്നറിയിപ്പ്: നിങ്ങൾ ഉറവിടത്തിലേക്ക് ഒരു ചിഹ്നം വിവർത്തനം ചെയ്യുകയാണെങ്കിൽ, "
+"സ്നാപ്പ് ഗ്രിഡ് വലുപ്പം 100 ആയി സജ്ജീകരിക്കണം\n"
 
+# Grid OFF; griḍ ōphāṇ
 #: gschem/src/iface/i_command.c:4627
 msgid "Grid OFF\n"
-msgstr ""
+msgstr "ഗ്രിഡ് ഓഫാണ്\n"
 
+# Dot grid activated; ḍēāṭṭ griḍ sajīvamākki
 #: gschem/src/iface/i_command.c:4628
 msgid "Dot grid activated\n"
-msgstr ""
+msgstr "ഡോട്ട് ഗ്രിഡ് സജീവമാക്കി\n"
 
+# Mesh grid activated; meṣ griḍ sajīvamākki
 #: gschem/src/iface/i_command.c:4629
 msgid "Mesh grid activated\n"
-msgstr ""
+msgstr "മെഷ് ഗ്രിഡ് സജീവമാക്കി\n"
 
 #: gschem/src/iface/i_command.c:4708
 msgid "Snap OFF (CAUTION!)"
