gschem; update Chinese simplified translations

--- a/gschem/po/zh_CN.po
+++ b/gschem/po/zh_CN.po
@@ -231,6 +231,35 @@ msgid ""
 "Report bugs at <https://bugs.launchpad.net/geda>\n"
 "gEDA homepage: <http://www.geda-project.org>\n"
 msgstr ""
+"用法: %s [选项 ...] [--] [文件 ...]\n"
+"\n"
+"交互式编辑gEDA原理图或符号. 如果指定了一个或多个文件,\n"
+"打开它们进行编辑；否则，请创建一个新的空原理图.\n"
+"\n"
+"选项:\n"
+"  -a, --render-adaptor <DRV> 指定要使用的渲染适配器，Cario或X11.\n"
+"  -c, --config-file <FILE>   要加载的其他配置文件.\n"
+"  -g, --guile <DIR>          将DIR添加到Guile路径（预配置）.\n"
+"  -f, --font <NAME>          设置字体系列名称\n"
+"  -h, --help                 帮助;这条信息.\n"
+"  -l, --list                 列出保存的会话名称.\n"
+"  -m, --safe-mode            安全模式.\n"
+"  -n, --no-auto              没有自动加载上一个文档.\n"
+"  -o, --output <FILE>        输出文件名（用于打印和图像输出）.\n"
+"  -p, --place                自动放置窗户.\n"
+"  -q, --quiet                Quiet mode.\n"
+"  -r, --run <FILE>           Scheme script to run at startup.\n"
+"  -s, --start <name>         Startup using the given session name.\n"
+"  -t, --title-block <FILE>   Start a new drawing using the specified title-block.\n"
+"  -u, --undo-dir <DIR>       Specify a temporary directory for Undo files.\n"
+"  -v, --verbose              Verbose mode.\n"
+"  -V, --version              Show version information.\n"
+"  -x (EXPR)                  Scheme expression to run at startup.\n"
+"  -z, --minimized            Hide the main window, used for scripting\n"
+"  --                         Treat all remaining arguments as filenames.\n"
+"\n"
+"Report bugs at <https://bugs.launchpad.net/geda>\n"
+"gEDA homepage: <http://www.geda-project.org>\n"
 
 #: gschem/src/base/gschem_parsecmd.c:131
 msgid ""
