gschem; update Chinese traditional translations

--- a/gschem/po/zh_TW.po
+++ b/gschem/po/zh_TW.po
@@ -231,6 +231,35 @@ msgid ""
 "Report bugs at <https://bugs.launchpad.net/geda>\n"
 "gEDA homepage: <http://www.geda-project.org>\n"
 msgstr ""
+"用法: %s [選項 ...] [--] [文件 ...]\n"
+"\n"
+"交互式編輯gEDA原理圖或符號. 如果指定了一個或多個文件,\n"
+"打開它們進行編輯；否則，請創建一個新的空原理圖.\n"
+"\n"
+"選項:\n"
+"  -a, --render-adaptor <DRV> 指定要使用的渲染適配器，Cario或X11.\n"
+"  -c, --config-file <FILE>   要加載的其他配置文件.\n"
+"  -g, --guile <DIR>          將DIR添加到Guile路徑（預配置）.\n"
+"  -f, --font <NAME>          設置字體系列名稱\n"
+"  -h, --help                 幫助;這條信息.\n"
+"  -l, --list                 列出保存的會話名稱.\n"
+"  -m, --safe-mode            安全模式.\n"
+"  -n, --no-auto              沒有自動加載上一個文檔.\n"
+"  -o, --output <FILE>        輸出文件名（用於打印和圖像輸出）.\n"
+"  -p, --place                自動放置窗戶.\n"
+"  -q, --quiet                Quiet mode.\n"
+"  -r, --run <FILE>           Scheme script to run at startup.\n"
+"  -s, --start <name>         Startup using the given session name.\n"
+"  -t, --title-block <FILE>   Start a new drawing using the specified title-block.\n"
+"  -u, --undo-dir <DIR>       Specify a temporary directory for Undo files.\n"
+"  -v, --verbose              Verbose mode.\n"
+"  -V, --version              Show version information.\n"
+"  -x (EXPR)                  Scheme expression to run at startup.\n"
+"  -z, --minimized            Hide the main window, used for scripting\n"
+"  --                         Treat all remaining arguments as filenames.\n"
+"\n"
+"Report bugs at <https://bugs.launchpad.net/geda>\n"
+"gEDA homepage: <http://www.geda-project.org>\n"
 
 #: gschem/src/base/gschem_parsecmd.c:131
 msgid ""
