--- a/gschem/po/pl.po
+++ b/gschem/po/pl.po
@@ -727,11 +727,10 @@ msgstr "Błąd"
 msgid "No component selected\n"
 msgstr "Nr wybranego podzespołu\n"
 
-# documents
+# Reverted document
 #: gschem/src/iface/i_command.c:3048 gschem/src/iface/i_window.c:333
-#, fuzzy
 msgid "Reverted document"
-msgstr "dokumenty"
+msgstr "Przywrócony dokument"
 
 #: gschem/src/iface/i_command.c:3106
 msgid "Confirm revert ALL documents"
@@ -1341,9 +1340,8 @@ msgstr ""
 
 # Load image failed
 #: gschem/src/object/o_picture.c:617
-#, fuzzy
 msgid "Failed to load picture"
-msgstr "<b>Wczytanie obrazu nie powiodło się<\b>"
+msgstr "Wczytanie obrazu nie powiodło się"
 
 #: gschem/src/object/o_picture.c:627
 msgid "An unknown error occurred"
