gschem: update Russian translations

--- a/gschem/po/ru.po
+++ b/gschem/po/ru.po
@@ -830,11 +830,10 @@ msgstr "ошибка"
 msgid "No component selected\n"
 msgstr "Не выбран компонент\n"
 
-# Confirm revert ALL documents; Podtverdite vozvrat VSEKH dokumentov
+# Reverted document; Vosstanovlennyy dokument
 #: gschem/src/iface/i_command.c:3048 gschem/src/iface/i_window.c:333
-#, fuzzy
 msgid "Reverted document"
-msgstr "Подтвердите возврат ВСЕХ документов"
+msgstr "Восстановленный документ"
 
 # Confirm revert ALL documents; Podtverdite vozvrat VSEKH dokumentov
 #: gschem/src/iface/i_command.c:3106
@@ -1459,9 +1458,8 @@ msgstr ""
 
 # Failed to load picture
 #: gschem/src/object/o_picture.c:617
-#, fuzzy
 msgid "Failed to load picture"
-msgstr "<b>Не удалось загрузить фотографию</b>"
+msgstr "Не удалось загрузить фотографию"
 
 #: gschem/src/object/o_picture.c:627
 msgid "An unknown error occurred"
