--- a/gschem/po/tr.po
+++ b/gschem/po/tr.po
@@ -797,10 +797,10 @@ msgstr "hata"
 msgid "No component selected\n"
 msgstr "Hiçbir bileşen seçilmedi\n"
 
+# Reverted document
 #: gschem/src/iface/i_command.c:3048 gschem/src/iface/i_window.c:333
-#, fuzzy
 msgid "Reverted document"
-msgstr "TÜM dokümanları geri almayı onayla"
+msgstr "Geri alınan belge"
 
 #: gschem/src/iface/i_command.c:3106
 msgid "Confirm revert ALL documents"
@@ -1393,11 +1393,10 @@ msgstr ""
 msgid "When checked the image size will be exported"
 msgstr ""
 
-# Failed to descend into
+# Failed to load picture
 #: gschem/src/object/o_picture.c:617
-#, fuzzy
 msgid "Failed to load picture"
-msgstr "Aşağı inemedi"
+msgstr "Resim yüklenemedi"
 
 #: gschem/src/object/o_picture.c:627
 msgid "An unknown error occurred"
