gschem: update Afrikaans translations

--- a/gschem/po/af.po
+++ b/gschem/po/af.po
@@ -726,10 +726,10 @@ msgstr "fout"
 msgid "No component selected\n"
 msgstr "Geen komponent gekies\n"
 
+# Reverted document
 #: gschem/src/iface/i_command.c:3048 gschem/src/iface/i_window.c:333
-#, fuzzy
 msgid "Reverted document"
-msgstr "Skep PDF dokument"
+msgstr "Teruggestelde dokument"
 
 #: gschem/src/iface/i_command.c:3106
 msgid "Confirm revert ALL documents"
@@ -1286,10 +1286,10 @@ msgstr "Oorspronklike grootte"
 msgid "When checked the image size will be exported"
 msgstr "As dit nagegaan word, sal die beeldgrootte uitgevoer word"
 
+# Failed to load picture; Image upload failed
 #: gschem/src/object/o_picture.c:617
-#, fuzzy
 msgid "Failed to load picture"
-msgstr "<b>Laai foto misluk</b>"
+msgstr "Laai foto misluk"
 
 # An unknown error occurred
 #: gschem/src/object/o_picture.c:627
