gschem: update Catalan translations

--- a/gschem/po/ca.po
+++ b/gschem/po/ca.po
@@ -826,11 +826,10 @@ msgstr "error"
 msgid "No component selected\n"
 msgstr "No s’ha seleccionat cap component\n"
 
-# Confirm revert ALL documents
+# Reverted document
 #: gschem/src/iface/i_command.c:3048 gschem/src/iface/i_window.c:333
-#, fuzzy
 msgid "Reverted document"
-msgstr "Confirmeu la recuperació de TOTS els documents"
+msgstr "Document revertit"
 
 # Confirm revert ALL documents
 #: gschem/src/iface/i_command.c:3106
@@ -1399,11 +1398,10 @@ msgstr ""
 msgid "When checked the image size will be exported"
 msgstr ""
 
-# Failed to descend into
+# Failed to load picture; Image upload failed
 #: gschem/src/object/o_picture.c:617
-#, fuzzy
 msgid "Failed to load picture"
-msgstr "No ha pogut descendir"
+msgstr "No s'ha pogut carregar la imatge"
 
 #: gschem/src/object/o_picture.c:627
 msgid "An unknown error occurred"
