gschem: update Danish translations

--- a/gschem/po/da.po
+++ b/gschem/po/da.po
@@ -804,11 +804,10 @@ msgstr "fejl"
 msgid "No component selected\n"
 msgstr "Ingen komponent valgt\n"
 
-# Confirm revert ALL documents
+# Reverted document
 #: gschem/src/iface/i_command.c:3048 gschem/src/iface/i_window.c:333
-#, fuzzy
 msgid "Reverted document"
-msgstr "Bekræft vende ALLE dokumenter tilbage"
+msgstr "Tilbageført dokument"
 
 # Confirm revert ALL documents
 #: gschem/src/iface/i_command.c:3106
@@ -1376,11 +1375,10 @@ msgstr ""
 msgid "When checked the image size will be exported"
 msgstr ""
 
-# Failed to descend into
+# Failed to load picture; Image upload failed
 #: gschem/src/object/o_picture.c:617
-#, fuzzy
 msgid "Failed to load picture"
-msgstr "Kunne ikke ned i"
+msgstr "Billedet kunne ikke indlæses"
 
 #: gschem/src/object/o_picture.c:627
 msgid "An unknown error occurred"
